@@ -2,6 +2,8 @@ Cascading Change Log
 
 unreleased
 
+  Deleted c.o.Cut class as it was effectively a duplicate of c.o.Identity.
+
   Changed c.f.MultiMapReducePlanner to fail if a c.p.GroupAssertion is not accompanied by another c.o.Aggregator
   operation. This is required so that the GroupAssertion does not change the passing tuple stream if it is planned out.
 
